test/core/errors/indexed_offsets_error/zs/bitwise_and_operator_in_array_expression_error.zs
package bitwise_and_operator_in_array_expression_error;

struct BitwiseAndOperatorInArrayExpressionError
{
    uint32 offsets[];
offsets[@index & 0xff]:
    string fields[];
};
